# pdf-splitter

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pdfsplitter/: __init__.py  cli.py  config.py  constants.py
src/pdfsplitter/core/: __init__.py  epub_processor.py  models.py  ocr_detector.py  pdf_processor.py
src/pdfsplitter/utils/: __init__.py  cache.py  file_ops.py  llm.py  logging.py
test/: Addy Osmani - Vibe Coding_ The Future of Programming (2025, O'Reilly Media, Inc.) - libgen.li.epub
tests/: conftest.py  test_cli.py  test_epub_processor.py  test_ocr_detector.py  test_pdf_processor.py
